# qinter

./: README.md  pyproject.toml  requirements.txt
explanation_packs/core/: name-errors.yaml  type-errors.yaml  value-errors.yaml
qinter/: __init__.py  __version__.py
qinter/cli/: __init__.py  main.py
qinter/cli/commands/: __init__.py  info.py  install.py  list.py  search.py
qinter/cli/display/: __init__.py  error_display.py  rich_formatter.py
qinter/config/: __init__.py  settings.py
qinter/core/: __init__.py  activator.py  interceptor.py
qinter/explanations/: __init__.py  context_analyzer.py  engine.py  pattern_matcher.py  template_renderer.py
qinter/utils/: __init__.py  exceptions.py  validation.py
registry-backend/: .env
registry-backend/app/: config.py  main.py
registry-backend/app/api/: auth.py  health.py  packages.py  registry.py  stats.py  upload.py  validation.py  versions.py
registry-backend/app/database/: migrations.py  supabase.py
registry-backend/app/dependencies/: auth.py
registry-backend/app/models/: package.py  user.py
registry-backend/app/schemas/: package.py  search.py
registry-backend/app/services/: auth_service.py  package_service.py  upload_service.py
registry-backend/app/utils/: validation.py
